# qemu-3dfx-macos

./: .dockerignore  .github  .gitignore  .gitmodules  00-qemu100x-mesa-glide.patch  00-qemu110x-mesa-glide.patch  00-qemu92x-mesa-glide.patch  01-qemu82x-mesa-glide.patch  02-qemu72x-mesa-glide.patch  Dockerfile  FRESH-SYSTEM-BUILD-GUIDE.sh  LICENSE  README-BUILD.md  README.md  fix-pkgconfig-to-xquartz.sh  guest-inspect-3dfx.bat  inspect-3dfx-renderer.sh  qemu-0  qemu-1  qemu.sign  run-archlinux.sh  scripts  sign_commit  test-env-vars.sh  test-patches.sh  virgil3d  wrappers
.github/: README.md
.github/agents/: my-agent.agent.md
.github/workflows/: README.md  build-and-package.yml  build-windows.yml  ci.yml  pr-test.yml  release-test.yml  release.yml  sign-and-distribute.yml  test-binary-distribution.yml  test-build.yml
homebrew-qemu3dfx/: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  cleanup.sh  create-bundle.sh  install.sh  qemu-3dfx.rb  tap-info.yml  test-formula.sh  test-local-tap.sh  test-tap.sh
homebrew-qemu3dfx/Formula/: glide-3dfx.rb  qemu-3dfx.rb
patches/: 0001-ui-sdl2-Add-SDL-clipboard-support-v2-clean.patch  qemu-10.0.0-sdl-clipboard-mailing-list-clean.patch  qemu-10.0.0-sdl-clipboard-post-3dfx-corrected-final.patch  qemu-10.0.0-sdl-clipboard-simple-safe.patch  qemu-10.0.2-sdl-clipboard-mailing-list-version.patch  qemu-9.2.2-sdl-clipboard.patch  qemu-vss-mingw64-v14-compat.patch
qemu-1/hw/mesa/: meson.build  mglcntx_linux.c  mglcntx_sdlgl.c
scripts/: build-qemu-3dfx.sh  qemu.sign  sign_commit
(+4 files in other folders)
